client/src/app/venues/venues-tree-view/venues-tree-view.component.sass
.node-content-wrapper
  padding-bottom: 300px

  &:hover .plus-button
    display: block

.single-node
  display: flex
  align-items: center
  height: 85px
  width: 100%

  &.node-without-children
    padding-left: 11px

  &:hover .buttons-container .node-button
    display: inline-block

  .inputs-container

    .node-name
      font-size: 18px

  .buttons-container
    margin-left: auto

    .node-button
      display: none
      width: 25px
      height: 25px
      cursor: pointer

    .plus-button
      content: url('../../../assets/images/add-circular-outlined-button.png')

    .edit-button
      content: url('../../../assets/images/edit.png')
      margin-right: 8px

  .node-info

    .node-name
      font-size: 18px
      margin-bottom: 15px

    .content-info
      font-size: 16px

      .content-short-name
        margin-right: 15px

      .content-url
        color: gray

    .content-url-placeholder
      font-size: 16px
      color: gray
      font-style: italic

  .edit-node-form
    display: flex
    align-items: center
    width: 100%

    .inputs-container
      margin-top: -40px
      width: 400px

      .dropdown-container
        position: absolute
        margin-top: 10px

    .buttons-container
      margin-left: auto
      width: 22%

